--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 [dependencies]
 log = { version = "0.4.22" }
 prost = { version = "0.13.3" }
-tokio = { version = "1.40.0" }
+tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread"] }
 zenoh = { version = "=1.0.0-beta.3" }
 
 [dev-dependencies]
 env_logger = { version = "0.11.5" }
-criterion = { version = "0.5.1" }
+criterion = { version = "0.5.1", features = ["async", "async_tokio"] }
 
 [[bench]]
 name = "zenoh_benchmark"
